--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -424,29 +424,47 @@ function delItem(id){carrito=carrito.filter(x=>x.id!==id);render();}
 window.delItem=delItem;
 
 // ==== Totales con descuento global ====
-function calcularTotales(descPorc=0){
-  let subtotal=0,iva=0,ieps=0,total=0;
-  carrito.forEach(it=>{
-    const imp=it.cantidad*it.precioUnit;
-    const dep=departamentos[it.departamento_id]||{iva:0,ieps:0};
-    const ivaT=dep.iva/100,iepsT=dep.ieps/100;
-    let base=imp;
-    if(iepsT>0&&ivaT>0){base=imp/(1+iepsT+ivaT*(1+iepsT));}
-    else if(iepsT>0){base=imp/(1+iepsT);}
-    else if(ivaT>0){base=imp/(1+ivaT);}
-    subtotal+=base;iva+=base*ivaT;ieps+=base*iepsT;total+=imp;
+function calcularTotales(descPorc = 0) {
+  let subtotal = 0, iva = 0, ieps = 0, total = 0;
+  let subtotalConDescuento = 0, subtotalSinDescuento = 0;
+
+  const descuento = Math.min(100, Math.max(0, descPorc || 0)) / 100;
+
+  carrito.forEach(it => {
+    const imp = it.cantidad * it.precioUnit;
+    const dep = departamentos[it.departamento_id] || { iva: 0, ieps: 0 };
+    const ivaT = dep.iva / 100, iepsT = dep.ieps / 100;
+    let base = imp;
+
+    if (iepsT > 0 && ivaT > 0) base = imp / (1 + iepsT + ivaT * (1 + iepsT));
+    else if (iepsT > 0) base = imp / (1 + iepsT);
+    else if (ivaT > 0) base = imp / (1 + ivaT);
+
+    subtotal += base;
+    iva += base * ivaT;
+    ieps += base * iepsT;
+    total += imp;
+
+    // 🚫 Si está en la lista de mayoreo, NO se le aplica descuento
+    if (productosMayoreo.includes(String(it.codigo))) {
+      subtotalSinDescuento += base;
+    } else {
+      subtotalConDescuento += base;
+    }
   });
-  const descuento=Math.min(100,Math.max(0,descPorc||0))/100;
-  const montoDesc=subtotal*descuento;
-  const subDesc=subtotal-montoDesc;
-  const ivaDesc=iva*(1-descuento);
-  const iepsDesc=ieps*(1-descuento);
-  const totalDesc=subDesc+ivaDesc+iepsDesc;
+
+  // Aplica descuento solo sobre los productos permitidos
+  const montoDesc = subtotalConDescuento * descuento;
+  const subtotalFinal = subtotal - montoDesc;
+  const ivaFinal = iva - (iva * (montoDesc / subtotal));
+  const iepsFinal = ieps - (ieps * (montoDesc / subtotal));
+  const totalFinal = subtotalFinal + ivaFinal + iepsFinal;
+
   return {
-    subtotal:+subtotal.toFixed(2),
-    descuento:+montoDesc.toFixed(2),
-    impuestos:+(ivaDesc+iepsDesc).toFixed(2),
-    total:+totalDesc.toFixed(2)
+    subtotal: +subtotal.toFixed(2),
+    descuento: +montoDesc.toFixed(2),
+    impuestos: +(ivaFinal + iepsFinal).toFixed(2),
+    total: +totalFinal.toFixed(2)
   };
 }
 
