--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 <div class="apps">
    <a href="POSVTAV2/REPORTE-CORTE-FACTURA.html">🚀 REPORTES PARA FACTURACION RUTAS</a>
   </div>
+<div class="apps">
+   <a href="MAPEOCATA/REPORTE-CORTE-FACTURA.html">🚀 REPORTES PARA FACTURACION RUTAS</a>
+  </div>
 
   
   <footer>
