--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
    <a href="POSVTAV2/REPORTE-CORTE-FACTURA.html">🚀 REPORTES PARA FACTURACION RUTAS</a>
   </div>
 <div class="apps">
-   <a href="MAPEOCATA/REPORTE-CORTE-FACTURA.html">🚀 REPORTES PARA FACTURACION RUTAS</a>
+   <a href="MAPEOCATA/MAPEO.html"> MAPEAR TECNOPRO ARTICULOS </a>
+  </div>
+<div class="apps">
+   <a href="MAPEOCATA/SUBIDA.html"> SUBIDA TECNOPRO ARTICULOS </a>
   </div>
 
   
