--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 <div class="apps">
    <a href="MAPEOCATA/SUBIDA.html"> SUBIDA TECNOPRO ARTICULOS </a>
   </div>
+<div class="apps">
+   <a href="POSTVTA3/cortes_pendientesGALLO.html"> Corte Pendiente GAllo </a>
+  </div>
 
   
   <footer>
